unpackaged/objects/Connector_Details__c.object
<CustomObject>
    <fields>
        <fullName>DSA_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSA/Connector</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only DSA/Connector can be selected</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connector Details</relationshipLabel>
        <relationshipName>Connector_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_If_DSA_Connector_does_not_Exist__c</fullName>
        <label>Name,If DSA/ Connector does not Exist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Logins__c</fullName>
        <label>No Of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_in_Lakhs__c</fullName>
        <label>Volume (in Lakhs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Sales_Plan__c</fullName>
        <label>Weekly Sales Plan</label>
        <referenceTo>Sales_Plan__c</referenceTo>
        <relationshipLabel>Connector Details</relationshipLabel>
        <relationshipName>Connector_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Connector Details</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connector Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dsa_connector_is_blank</fullName>
        <active>true</active>
        <description>dsa/connector is blank  then dsa/connector name is required</description>
        <errorConditionFormula>ISBLANK( DSA_Connector__c ) &amp;&amp; ISBLANK( Name_If_DSA_Connector_does_not_Exist__c )</errorConditionFormula>
        <errorMessage>If DSA/Connector not available, then name if DSA/Connector does not Exist should not be blank</errorMessage>
    </validationRules>
</CustomObject>